--- a/backend/package.json
+++ b/backend/package.json
@@ -5,5 +5,13 @@
   "license": "MIT",
   "dependencies": {
     "graphql-yoga": "^1.18.1"
+  },
+  "devDependencies": {
+    "parcel": "^1.12.3",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.3"
+  },
+  "scripts": {
+    "start": "parcel index.ts"
   }
 }
