--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,11 @@
     "graphql-yoga": "^1.18.1"
   },
   "devDependencies": {
+    "nodemon": "^1.19.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   },
   "scripts": {
-    "start": "parcel index.ts"
+    "start": "nodemon index.ts"
   }
 }
