--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,21 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/runtime": "^7.6.0",
     "graphql-yoga": "^1.18.1"
   },
   "devDependencies": {
+    "@babel/node": "^7.6.1",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-typescript": "^7.6.0",
     "nodemon": "^1.19.2",
-    "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   },
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "nodemon --exec babel-node index.ts"
   }
 }
