--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.6.0",
+    "axios": "^0.19.0",
     "graphql-yoga": "^1.18.1"
   },
   "devDependencies": {
