--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
     "graphql-yoga": "^1.18.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  },
+  "scripts": {
+    "start": "nodemon"
   }
 }
