--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,12 @@
     "graphql-yoga": "^1.18.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1",
     "nodemon": "^2.0.2"
   },
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon --exec babel-node index.js"
   }
 }
